--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ sea-query-binder = { version = "0.6.0", default-features = false, optional = tru
 strum = { version = "0.26", default-features = false }
 serde = { version = "1.0", default-features = false }
 serde_json = { version = "1.0", default-features = false, optional = true }
-sqlx = { version = "0.7", default-features = false, optional = true }
+sqlx = { git = "https://github.com/pierre-wehbe/sqlx.git", rev = "3e9473c4ea9c33281b92f86cd96802efafc97922", default-features = false, optional = true }
 uuid = { version = "1", default-features = false, optional = true }
 ouroboros = { version = "0.17", default-features = false }
 url = { version = "2.2", default-features = false }
